--- a/Osa2/maiden_tiedot/package.json
+++ b/Osa2/maiden_tiedot/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "openmeteo": "^1.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
