--- a/Osa3/puhelinluettelo/package.json
+++ b/Osa3/puhelinluettelo/package.json
@@ -19,6 +19,11 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.7.10"
+    "@eslint/js": "^9.39.1",
+    "@flydotio/dockerfile": "^0.7.10",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0"
   }
 }
